--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -16,10 +16,11 @@
 .Item-title {
   width: 100%;
   padding: 20px 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Item-actions {
   display: flex;
   justify-content: flex-end;
-  padding: 20px 20px 20px 10px;
 }
