--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -17,6 +17,13 @@
 .Item-title {
   width: 100%;
   padding: 20px 10px;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration:underline;
+  }
 }
 
 .Item-actions {
