--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -1,9 +1,12 @@
 /* Контрол с общими действиями */
 .BasketTool {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 20px;
   font-size: 18px;
+}
+.BasketTool-link {
+
 }
 
 .BasketTool-label {
