--- a/src/containers/head-profile/style.css
+++ b/src/containers/head-profile/style.css
@@ -2,8 +2,10 @@
   height: 41px;
   background: #fff;
   display: flex;
+  flex-wrap: nowrap;
   padding: 0 15px;
   align-items: center;
   justify-content: flex-end;
   gap: 20px;
+  border-bottom: 1px solid #DCDCDC;
 }
