--- a/src/components/menu/style.css
+++ b/src/components/menu/style.css
@@ -13,6 +13,11 @@
   margin: 0 2px;
 }
 
+.Menu-link {
+  color: #0087E9 !important;
+  text-decoration: none;
+}
+
 .Menu-item:first-child {
   margin-left: 0;
   padding-left: 0;
